﻿shmuel 01.07.2014 00:02:47 +0200 - build 387

1. Откат 383-386.

2. Возможность открытия редактора из диалога ошибки (пока только при загрузке макросов, и то не во всех случаях).

3. При переходе на MoonScript 0.2.6 сломалось нахождение номера строки в .moon-файлах.

shmuel 30.06.2014 14:02:24 +0200 - build 386

1. Продолжение 383: аргументы, передаваемые обработчикам события "CommandLine", задаются списком Lua-выражений.

shmuel 28.06.2014 19:47:38 +0200 - build 385

1. Продолжение 383: плагин передаёт обработчикам события "CommandLine" не таблицу, а последовательность аргументов.

shmuel 28.06.2014 00:21:04 +0200 - build 384

1. Продолжение 383: плагин передаёт обработчикам события "CommandLine" таблицу - массив аргументов.

shmuel 27.06.2014 16:54:07 +0200 - build 383

1. Новая команда macro:user (lm:user) и новый тип обработчика событий group="CommandLine". Подробности - в мануале.

shmuel 25.06.2014 13:37:44 +0200 - build 382

1. LuaFAR: far.MacroAdd и far.MacroDelete могут работать не только из основного lua_State, но и из дополнительных.

shmuel 24.06.2014 01:36:45 +0200 - build 381

1. MoonScript: в сборку не был включён файл moon.lua.

shmuel 23.06.2014 22:46:06 +0200 - build 380

1. Уточнение 377.2.

shmuel 23.06.2014 20:38:21 +0200 - build 379

1. LuaFAR: мелкий рефакторинг.

shmuel 22.06.2014 13:11:38 +0200 - build 378

1. MoonScript 0.2.6.

shmuel 21.06.2014 18:09:57 +0200 - build 377

1. LuaFAR: при создании и инициализации дополнительного lua_State, и вызове из него диалога, было падение.

2. LuaFAR (generic plugin): экспортируемая функция luaopen_luaplug сделана доступной из Lua, в виде глобальной
   переменной _luaplug. Подробнее - в мануале.

shmuel 18.06.2014 20:47:47 +0200 - build 376

1. Уточнение 366.

shmuel 17.06.2014 16:35:54 +0200 - build 375

1. Уточнение 372.

shmuel 17.06.2014 16:14:51 +0200 - build 374

1. LuaFAR: функция editor.InsertTextW теперь сама обеспечивает два нулевых байта в конце текста,