@@ -133,13 +133,14 @@ void LUAPLUG SetStartupInfoW(const struct PluginStartupInfo *aInfo)
 {
 	if(LS && !Init2_Done)
 	{
-		Init2_Done = 1;
 		Info = *aInfo;
 		FSF = *aInfo->FSF;
 		Info.FSF = &FSF;
 		InitLuaState2(LS, &PluginData);
 
-		if(LF_RunDefaultScript(LS) == FALSE)
+		if(LF_RunDefaultScript(LS))
+			Init2_Done = 1;
+		else
 		{
 			lua_close(LS);
 			LS = NULL;
@@ -156,7 +157,7 @@ void LUAPLUG GetPluginInfoW(struct PluginInfo *Info)
 
 intptr_t LUAPLUG ProcessSynchroEventW(const struct ProcessSynchroEventInfo *Info)
 {
-	if(LS) return LF_ProcessSynchroEvent(LS, Info);
+	if(LS && Init2_Done) return LF_ProcessSynchroEvent(LS, Info);
 
 	return 0;
 }
@@ -204,7 +205,7 @@ static int RecreateLuaState()
 
 HANDLE LUAPLUG OpenW(const struct OpenInfo *Info)
 {
-	if(LS)
+	if(LS && Init2_Done)
 	{
 		static int Depth = 0; // prevents crashes (this function can be called recursively)
 		HANDLE h;
@@ -226,14 +227,14 @@ HANDLE LUAPLUG OpenW(const struct OpenInfo *Info)
 #ifdef EXPORT_GETFINDDATA
 intptr_t LUAPLUG GetFindDataW(struct GetFindDataInfo *Info)
 {
-	if(LS) return LF_GetFindData(LS, Info);
+	if(LS && Init2_Done) return LF_GetFindData(LS, Info);
 
 	return FALSE;
 }
 
 void LUAPLUG FreeFindDataW(const struct FreeFindDataInfo *Info)
 {
-	if(LS) LF_FreeFindData(LS, Info);
+	if(LS && Init2_Done) LF_FreeFindData(LS, Info);
 }
 #endif
 //---------------------------------------------------------------------------
@@ -241,7 +242,7 @@ void LUAPLUG FreeFindDataW(const struct FreeFindDataInfo *Info)
 #ifdef EXPORT_CLOSEPANEL
 void LUAPLUG ClosePanelW(const struct ClosePanelInfo *Info)
 {
-	if(LS) LF_ClosePanel(LS, Info);
+	if(LS && Init2_Done) LF_ClosePanel(LS, Info);
 }
 #endif
 //---------------------------------------------------------------------------
@@ -249,7 +250,7 @@ void LUAPLUG ClosePanelW(const struct ClosePanelInfo *Info)
 #ifdef EXPORT_GETFILES
 intptr_t LUAPLUG GetFilesW(struct GetFilesInfo *Info)
 {
-	if(LS)
+	if(LS && Init2_Done)
 		return LF_GetFiles(LS, Info);
 
 	return 0;
@@ -260,7 +261,7 @@ intptr_t LUAPLUG GetFilesW(struct GetFilesInfo *Info)
 #ifdef EXPORT_GETOPENPANELINFO
 void LUAPLUG GetOpenPanelInfoW(struct OpenPanelInfo *Info)
 {
-	if(LS) LF_GetOpenPanelInfo(LS, Info);
+	if(LS && Init2_Done) LF_GetOpenPanelInfo(LS, Info);
 }
 #endif
 //---------------------------------------------------------------------------
@@ -268,7 +269,7 @@ void LUAPLUG GetOpenPanelInfoW(struct OpenPanelInfo *Info)
 #ifdef EXPORT_EXITFAR
 void LUAPLUG ExitFARW(const struct ExitInfo *Info)
 {
-	if(LS)
+	if(LS && Init2_Done)
 	{
 		lua_State* oldState = LS;
 		LS = NULL;
@@ -282,7 +283,7 @@ void LUAPLUG ExitFARW(const struct ExitInfo *Info)
 #ifdef EXPORT_COMPARE
 intptr_t LUAPLUG CompareW(const struct CompareInfo *Info)
 {
-	if(LS) return LF_Compare(LS, Info);
+	if(LS && Init2_Done) return LF_Compare(LS, Info);
 
 	return 0;
 }
@@ -292,7 +293,7 @@ intptr_t LUAPLUG CompareW(const struct CompareInfo *Info)
 #ifdef EXPORT_CONFIGURE
 intptr_t LUAPLUG ConfigureW(const struct ConfigureInfo *Info)
 {
-	if(LS) return LF_Configure(LS, Info);
+	if(LS && Init2_Done) return LF_Configure(LS, Info);
 
 	return FALSE;
 }
@@ -302,7 +303,7 @@ intptr_t LUAPLUG ConfigureW(const struct ConfigureInfo *Info)
 #ifdef EXPORT_DELETEFILES
 intptr_t LUAPLUG DeleteFilesW(const struct DeleteFilesInfo *Info)
 {
-	if(LS) return LF_DeleteFiles(LS, Info);
+	if(LS && Init2_Done) return LF_DeleteFiles(LS, Info);
 
 	return FALSE;
 }
@@ -312,7 +313,7 @@ intptr_t LUAPLUG DeleteFilesW(const struct DeleteFilesInfo *Info)
 #ifdef EXPORT_MAKEDIRECTORY
 intptr_t LUAPLUG MakeDirectoryW(struct MakeDirectoryInfo *Info)
 {
-	if(LS) return LF_MakeDirectory(LS, Info);
+	if(LS && Init2_Done) return LF_MakeDirectory(LS, Info);
 
 	return 0;
 }
@@ -322,7 +323,7 @@ intptr_t LUAPLUG MakeDirectoryW(struct MakeDirectoryInfo *Info)
 #ifdef EXPORT_PROCESSPANELEVENT
 intptr_t LUAPLUG ProcessPanelEventW(const struct ProcessPanelEventInfo *Info)
 {
-	if(LS) return LF_ProcessPanelEvent(LS, Info);
+	if(LS && Init2_Done) return LF_ProcessPanelEvent(LS, Info);
 
 	return FALSE;
 }
@@ -332,7 +333,7 @@ intptr_t LUAPLUG ProcessPanelEventW(const struct ProcessPanelEventInfo *Info)
 #ifdef EXPORT_PROCESSHOSTFILE
 intptr_t LUAPLUG ProcessHostFileW(const struct ProcessHostFileInfo *Info)
 {
-	if(LS) return LF_ProcessHostFile(LS, Info);
+	if(LS && Init2_Done) return LF_ProcessHostFile(LS, Info);
 
 	return FALSE;
 }
@@ -342,7 +343,7 @@ intptr_t LUAPLUG ProcessHostFileW(const struct ProcessHostFileInfo *Info)
 #ifdef EXPORT_PROCESSPANELINPUT
 intptr_t LUAPLUG ProcessPanelInputW(const struct ProcessPanelInputInfo *Info)
 {
-	if(LS) return LF_ProcessPanelInput(LS, Info);
+	if(LS && Init2_Done) return LF_ProcessPanelInput(LS, Info);
 
 	return FALSE;
 }
@@ -352,7 +353,7 @@ intptr_t LUAPLUG ProcessPanelInputW(const struct ProcessPanelInputInfo *Info)
 #ifdef EXPORT_PUTFILES
 intptr_t LUAPLUG PutFilesW(const struct PutFilesInfo *Info)
 {
-	if(LS) return LF_PutFiles(LS, Info);
+	if(LS && Init2_Done) return LF_PutFiles(LS, Info);
 
 	return 0;
 }
@@ -362,7 +363,7 @@ intptr_t LUAPLUG PutFilesW(const struct PutFilesInfo *Info)
 #ifdef EXPORT_SETDIRECTORY
 intptr_t LUAPLUG SetDirectoryW(const struct SetDirectoryInfo *Info)
 {
-	if(LS) return LF_SetDirectory(LS, Info);
+	if(LS && Init2_Done) return LF_SetDirectory(LS, Info);
 
 	return FALSE;
 }
@@ -372,7 +373,7 @@ intptr_t LUAPLUG SetDirectoryW(const struct SetDirectoryInfo *Info)
 #ifdef EXPORT_SETFINDLIST
 intptr_t LUAPLUG SetFindListW(const struct SetFindListInfo *Info)
 {
-	if(LS) return LF_SetFindList(LS, Info);
+	if(LS && Init2_Done) return LF_SetFindList(LS, Info);
 
 	return FALSE;
 }
@@ -382,7 +383,7 @@ intptr_t LUAPLUG SetFindListW(const struct SetFindListInfo *Info)
 #ifdef EXPORT_PROCESSEDITORINPUT
 intptr_t LUAPLUG ProcessEditorInputW(const struct ProcessEditorInputInfo *Info)
 {
-	if(LS) return LF_ProcessEditorInput(LS, Info);
+	if(LS && Init2_Done) return LF_ProcessEditorInput(LS, Info);
 
 	return 0;
 }
@@ -392,7 +393,7 @@ intptr_t LUAPLUG ProcessEditorInputW(const struct ProcessEditorInputInfo *Info)
 #ifdef EXPORT_PROCESSEDITOREVENT
 intptr_t LUAPLUG ProcessEditorEventW(const struct ProcessEditorEventInfo *Info)
 {
-	if(LS) return LF_ProcessEditorEvent(LS, Info);
+	if(LS && Init2_Done) return LF_ProcessEditorEvent(LS, Info);
 
 	return 0;
 }
@@ -402,7 +403,7 @@ intptr_t LUAPLUG ProcessEditorEventW(const struct ProcessEditorEventInfo *Info)
 #ifdef EXPORT_PROCESSVIEWEREVENT
 intptr_t LUAPLUG ProcessViewerEventW(const struct ProcessViewerEventInfo *Info)
 {
-	if(LS) return LF_ProcessViewerEvent(LS, Info);
+	if(LS && Init2_Done) return LF_ProcessViewerEvent(LS, Info);
 
 	return 0;
 }
@@ -412,7 +413,7 @@ intptr_t LUAPLUG ProcessViewerEventW(const struct ProcessViewerEventInfo *Info)
 #ifdef EXPORT_PROCESSDIALOGEVENT
 intptr_t LUAPLUG ProcessDialogEventW(const struct ProcessDialogEventInfo *Info)
 {
-	if(LS)
+	if(LS && Init2_Done)
 	{
 #ifdef EXPORT_OPEN
 		intptr_t r;
@@ -432,14 +433,14 @@ intptr_t LUAPLUG ProcessDialogEventW(const struct ProcessDialogEventInfo *Info)
 #ifdef EXPORT_GETCUSTOMDATA
 intptr_t LUAPLUG GetCustomDataW(const wchar_t *FilePath, wchar_t **CustomData)
 {
-	if(LS) return LF_GetCustomData(LS, FilePath, CustomData);
+	if(LS && Init2_Done) return LF_GetCustomData(LS, FilePath, CustomData);
 
 	return 0;
 }
 
 void LUAPLUG FreeCustomDataW(wchar_t *CustomData)
 {
-	if(LS) LF_FreeCustomData(LS, CustomData);
+	if(LS && Init2_Done) LF_FreeCustomData(LS, CustomData);
 }
 #endif
 //---------------------------------------------------------------------------
@@ -447,7 +448,7 @@ void LUAPLUG FreeCustomDataW(wchar_t *CustomData)
 #ifdef EXPORT_ANALYSE
 HANDLE LUAPLUG AnalyseW(const struct AnalyseInfo *Info)
 {
-	if(LS) return LF_Analyse(LS, Info);
+	if(LS && Init2_Done) return LF_Analyse(LS, Info);
 
 	return 0;
 }
@@ -457,7 +458,7 @@ HANDLE LUAPLUG AnalyseW(const struct AnalyseInfo *Info)
 #ifdef EXPORT_CLOSEANALYSE
 void LUAPLUG CloseAnalyseW(const struct CloseAnalyseInfo *Info)
 {
-	if(LS) LF_CloseAnalyse(LS, Info);
+	if(LS && Init2_Done) LF_CloseAnalyse(LS, Info);
 }
 #endif
 //---------------------------------------------------------------------------
@@ -465,7 +466,7 @@ void LUAPLUG CloseAnalyseW(const struct CloseAnalyseInfo *Info)
 #ifdef EXPORT_PROCESSCONSOLEINPUT
 intptr_t LUAPLUG ProcessConsoleInputW(struct ProcessConsoleInputInfo *Info)
 {
-	if(LS) return LF_ProcessConsoleInput(LS, Info);
+	if(LS && Init2_Done) return LF_ProcessConsoleInput(LS, Info);
 
 	return 0;
 }
