@@ -1,4 +1,9 @@
-﻿shmuel 01.07.2014 00:02:47 +0200 - build 387
+﻿shmuel 03.07.2014 12:38:39 +0200 - build 388
+
+1. LuaFAR (generic plugin): защита от вызовов Фаром экспортируемых функций плагина, производимых
+   до возвращения из SetStartupInfoW(), то-есть когда плагин ещё не полностью инициализирован.
+
+shmuel 01.07.2014 00:02:47 +0200 - build 387
 
 1. Откат 383-386.
 
